# paper-pock-scissors-game

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  makefile  pyproject.toml  setup.py
conf/: game_logs.yml
docs/: game.md
game/: __init__.py
game/app/: game_app.py  url_shortened.py
game/logger/: __init__.py  struct_logger.py
tests/: test_game.py  test_url_shortened.py
